--- a/src/components/app/styles/App.css
+++ b/src/components/app/styles/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
+  padding-bottom: 24px;
 }
 
 .App-header {
@@ -19,4 +22,12 @@
 
 .App-link {
   color: #61dafb;
+}
+*{
+  padding: 0;
+  margin: 0;
+}
+h1{
+  font-size: 36px;
+  padding: 12px;
 }
